--- a/.github/workflows/parse-feed.yml
+++ b/.github/workflows/parse-feed.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Parse feed
         run: |
           python -m pip install -U pip
-          python -m pip intall -r requirements.txt
+          python -m pip install -r requirements.txt
           python parse-feed.py -f ${{ github.event.inputs.feed }}
 
