--- a/.github/workflows/add-source.yml
+++ b/.github/workflows/add-source.yml
@@ -11,7 +11,7 @@ on:
         required: true
       description:
         description: 'Description of the source to add'
-        required: true
+        required: false
 
 jobs:
 
